# clap-host

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-vcpkg-host.sh
.github/workflows/: build.yml  delete-packages.yml
cmake/: Dependencies.cmake
host/: CMakeLists.txt  about-dialog.cc  about-dialog.hh  application.cc  application.hh  audio-settings-widget.cc  audio-settings-widget.hh  audio-settings.cc  audio-settings.hh  device-reference.hh  engine.cc  engine.hh  main-window.cc  main-window.hh  main.cc  midi-settings-widget.cc  midi-settings-widget.hh  midi-settings.cc  plugin-host-settings.cc  plugin-host-settings.hh  plugin-host.cc  plugin-host.hh  plugin-param.cc  plugin-parameters-widget.cc  plugin-parameters-widget.hh  plugin-quick-controls-widget.cc  plugin-quick-controls-widget.hh  settings-dialog.cc  settings-dialog.hh  settings.cc  settings.hh  tweaks-dialog.cc  tweaks-dialog.hh
resources/linux/: clap-host.desktop  org.cleveraudio.clap-host.appdata.xml  org.cleveraudio.clap-host.desktop.in
scripts/: build-vcpkg-host.sh  build.ps1  build.sh
vcpkg-overlay/triplets/: arm64-osx-clap-host.cmake  arm64-osx.cmake  x64-linux-clap-host.cmake  x64-linux.cmake  x64-osx-clap-host.cmake  x64-osx.cmake  x64-win-clap-host.cmake  x64-windows-clap-host.cmake  x64-windows.cmake  x86-windows-clap-host.cmake  x86-windows.cmake
